samples portfolio done

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     -->
       <!-- Роздiл Наша команда team-->
       
-      <section class="team">
+      <!-- <section class="team">
         <div class="container">
         <h2 class="team__title">Наша команда</h2>
 
@@ -374,7 +374,7 @@
           </li>
         </ul>
       </div>
-      </section>
+      </section> -->
     
       <!-- Постійні клієнти -->
 
