--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
       <main>
         <!-- посилання на сторінку -->
 
-        <!-- <section class="filter">
+        <section class="filter">
           <div class="container">
               <ul class="filter__list">
                   <li class="filter__item"><button type="button" class="filter__button">Усі</button></li>
@@ -61,11 +61,11 @@
                   <li class="filter__item"><button type="button" class="filter__button no-margin">Маркетинг</button></li>
               </ul>
             </div>
-            </section>    -->
+            </section>   
 <section>
     <!-- Приклади робіт -->
     <!-- <h2>Приклади наших робіт   - скрытый заголовок, пока не указываю</h2> -->
-    <div class="container">
+    <!-- <div class="container">
 <ul class="samples">
   
   <li class="samples__item"> 
@@ -279,7 +279,7 @@
 
 </ul>
     
-</div>
+</div> -->
 </section>
 
 </main> 
