--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
 <section>
     <!-- Приклади робіт -->
     <!-- <h2>Приклади наших робіт   - скрытый заголовок, пока не указываю</h2> -->
-    <!-- <div class="container">
+    <div class="container">
 <ul class="samples">
   
   <li class="samples__item"> 
@@ -279,7 +279,7 @@
 
 </ul>
     
-</div> -->
+</div>
 </section>
 
 </main> 
