mobile menu . выровнять только черточки социал

--- a/index.html
+++ b/index.html
@@ -506,10 +506,10 @@
     </ul>
 
     <ul class="mobile-socials">
-      <li class="mobile-socials__item"><a class="mobile-socials__link " href="">Instagram</a></li>
-      <li class="mobile-socials__item"><a class="mobile-socials__link " href="">Twitter</a></li>
-      <li class="mobile-socials__item"><a class="mobile-socials__link " href="">Facebook</a></li>
-      <li class="mobile-socials__item"><a class="mobile-socials__link " href="">LinkedIn</a></li>
+      <li class="mobile-socials__item"><a class="mobile-socials__link " href="">Instagram</a><span><svg class="line" width="0" height="22"><use href="./img/sprite-icon.svg#line"></use></svg></span></li>
+      <li class="mobile-socials__item"><a class="mobile-socials__link " href="">Twitter</a><span><svg class="line" width="0" height="22"><use href="./img/sprite-icon.svg#line"></use></svg></span></li>
+      <li class="mobile-socials__item"><a class="mobile-socials__link " href="">Facebook</a><span><svg class="line" width="0" height="22"><use href="./img/sprite-icon.svg#line"></use></svg></span></li>
+      <li class="mobile-socials__item"><a class="mobile-socials__link " href="">LinkedIn</a><span><svg class="line" width="0" height="22"><use href="./img/sprite-icon.svg#line"></use></svg></span></li>
     </ul>
 
 
