--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
    
     <footer class="site-footer">
       <div class="container">
-        <div class="adflex">
+        <div class="adflex-footer">
         <div class="site-footer__contacts">
       <a href="#" class="foot-link" lang="en"><span class="site-footer__logo">Web</span>Studio</a>
       
