--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           ><span class="checkbox-agree" 
             ><svg class="checkbox-svg" width="16px" height="15px"> 
               <use href="./img/galka.svg#icon-Vector"></use></svg></span 
-          ><span>Погоджуюся з розсилкою та приймаю</span> 
+          ><span class="agree-text">Погоджуюся з розсилкою та приймаю</span> 
           <a href="" class="agree-link"><span>Умови договору</span></a></label 
         > 
       </div>
