--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <h2 class="modal__title">Leave your details, and we will call you back</h2>
         
 
-        <label for="user-name" class="label__data">Ім'я</label>
+        <label for="user-name" class="label__data">Name</label>
         <div class="input-wraper">
 
       <input name="user-name" id="user-name" type="text" class="modal-form__input">
